--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,18 @@
             <item name="android:textSize">18sp</item>
             <item name="android:elevation">4dp</item> <!-- Add elevation for shadow effect -->
         </style>
+
+        <style name="GameButton">
+            <item name="android:layout_width">50dp</item>
+            <item name="android:layout_height">50dp</item>
+            <item name="android:layout_margin">2dp</item>
+            <item name="android:background">@drawable/circle_background</item>
+        </style>
+
+        <style name="EmptyView">
+            <item name="android:layout_width">50dp</item>
+            <item name="android:layout_height">50dp</item>
+        </style>
+
+
 </resources>
