--- a/app/src/main/res/layout/activity_indoor_games.xml
+++ b/app/src/main/res/layout/activity_indoor_games.xml
@@ -20,48 +20,48 @@
             android:layout_marginBottom="16dp" />
 
         <!-- Chess -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="106dp"
-            android:layout_marginTop="8dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="106dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:orientation="horizontal">-->
 
-            <ImageView
-                android:layout_width="143dp"
-                android:layout_height="120dp"
-                android:layout_marginEnd="10dp"
-                android:contentDescription="Chess"
-                android:src="@drawable/chess_icon" />
+<!--            <ImageView-->
+<!--                android:layout_width="143dp"-->
+<!--                android:layout_height="120dp"-->
+<!--                android:layout_marginEnd="10dp"-->
+<!--                android:contentDescription="Chess"-->
+<!--                android:src="@drawable/chess_icon" />-->
 
-            <Button
-                android:id="@+id/btnChess"
-                android:layout_width="195dp"
-                android:layout_height="wrap_content"
-                android:text="Chess" />
-        </LinearLayout>
+<!--            <Button-->
+<!--                android:id="@+id/btnChess"-->
+<!--                android:layout_width="195dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Chess" />-->
+<!--        </LinearLayout>-->
 
-        <!-- Table Tennis -->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical"
-            android:layout_marginTop="8dp">
+<!--        &lt;!&ndash; Table Tennis &ndash;&gt;-->
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:orientation="horizontal"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:layout_marginTop="8dp">-->
 
-            <ImageView
-                android:layout_width="142dp"
-                android:layout_height="104dp"
-                android:layout_marginEnd="10dp"
-                android:contentDescription="Table Tennis"
-                android:src="@drawable/table_tennis_icon" />
+<!--            <ImageView-->
+<!--                android:layout_width="142dp"-->
+<!--                android:layout_height="104dp"-->
+<!--                android:layout_marginEnd="10dp"-->
+<!--                android:contentDescription="Table Tennis"-->
+<!--                android:src="@drawable/table_tennis_icon" />-->
 
-            <Button
-                android:id="@+id/btnTableTennis"
-                android:layout_width="195dp"
-                android:layout_height="wrap_content"
-                android:text="Table Tennis" />
-        </LinearLayout>
+<!--            <Button-->
+<!--                android:id="@+id/btnTableTennis"-->
+<!--                android:layout_width="195dp"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="Table Tennis" />-->
+<!--        </LinearLayout>-->
 
         <!-- Tic Tac Toe -->
         <LinearLayout
