--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,8 @@
         android:contentDescription="Background Image"
         android:scaleType="centerCrop"
         android:src="@drawable/background_image"
-        tools:layout_editor_absoluteX="-34dp"
-        tools:layout_editor_absoluteY="573dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="-34dp" />
 
     <!-- Outdoor Games Button -->
     <Button
@@ -52,7 +52,7 @@
         android:layout_marginEnd="69dp"
         android:layout_marginBottom="225dp"
         android:background="@drawable/board_background"
-        android:drawableTop="@drawable/indoor_image"
+        android:drawableTop="@drawable/outdoor_image13"
         android:drawablePadding="10dp"
         android:padding="20dp"
         android:text="Outdoor Games"
